--- a/index-2.html
+++ b/index-2.html
@@ -1284,38 +1284,32 @@
     <!-- Project area style-1 end -->
 
     <!-- Newsletter Section Start !-->
-    <div class="pt-140">
+    <div class="subscribe-area style-1 pt-140">
       <div
-        class="subscribe-area style-1"
+        class="inner-wrapper"
         style="background-image: url(images/section-bg/testimonial-two.png)"
       >
         <div class="container">
-          <div class="row justify-content-end">
-            <div class="col-xl-5">
-              <div class="subscribe-form-widget">
-                <div class="image">
-                  <img src="images/icon/letter.svg" alt="subscribe" />
-                </div>
-                <h5 class="short-title">Hotel Facility</h5>
-                <h2 class="title mb-30">
-                  Sign Up For Your
-                  <br />
-                  Newsletter
-                </h2>
-                <form>
-                  <div class="mc4wp-form-fields">
-                    <div class="single-field">
-                      <input type="email" placeholder="Enter Your Email" />
-                    </div>
-                    <div class="d-flex justify-content-center mt-45">
-                      <button class="submit-btn" type="submit">
-                        submit now
-                      </button>
-                    </div>
-                  </div>
-                </form>
-              </div>
+          <div class="subscribe-form-widget">
+            <div class="image">
+              <img src="images/icon/letter.svg" alt="subscribe" />
             </div>
+            <h5 class="short-title">Hotel Facility</h5>
+            <h2 class="title mb-30">
+              Sign Up For Your
+              <br />
+              Newsletter
+            </h2>
+            <form>
+              <div class="mc4wp-form-fields">
+                <div class="single-field">
+                  <input type="email" placeholder="Enter Your Email" />
+                </div>
+                <div class="d-flex justify-content-center mt-45">
+                  <button class="submit-btn" type="submit">submit now</button>
+                </div>
+              </div>
+            </form>
           </div>
         </div>
       </div>
